--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ server.port=9090
 #spring.jpa.properties.hibernate.format_sql=true
 #spring.jpa.show-sql=true
 
-spring.datasource.url=jdbc:mysql://localhost:3306/tourismdb?serverTimezone=Asia/Seoul
+spring.datasource.url=jdbc:mysql://localhost:3306/tourismdb?useSSL=false&serverTimezone=Asia/Seoul
 spring.datasource.username=tourismdb
 spring.datasource.password=tourismdb
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
